# bd_populate_scorecard

./: README.md  bd_scorecard_lookup.py  options.json  pkg_repo_lookup.py  pyproject.toml  scorecard_lookup.py
bd_scorecard/: BOMClass.py  ComponentClass.py  ComponentListClass.py  ConfigClass.py  CustomFieldsClass.py  main.py
